--- a/modules/derive/Cargo.toml
+++ b/modules/derive/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["german gomez <germangb42@gmail.com>"]
 edition = "2018"
 
+[workspace]
+members = ["modules/derive", "modules/traits"]
+
 [lib]
 proc-macro = true
 
