--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ rust:
   - stable
   - beta
   - nightly
+before_install:
+  - sudo add-apt-repository -y ppa:team-xbmc/ppa
+  - sudo apt-get update -qq
+  - sudo apt-get install -y  libsdl2-dev
 script:
   - cargo build --verbose --all
   - cargo test --verbose --all
