--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rust:
   - beta
   - nightly
 script:
+  - cargo fmt -- --check
   - cargo build --verbose --all
   - cargo test --verbose --all
 matrix:
