--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ rust:
   - beta
   - nightly
 script:
-  - cargo fmt -- --check
-  - cargo build --verbose --all
-  - cargo test --verbose --all
+  - cargo build --all-features --verbose --features ci
+  - cargo test --all-features --verbose --features ci
 matrix:
   allow_failures:
     - rust: nightly
   fast_finish: true
 after_success:
-- test $TRAVIS_BRANCH = "master" && bash ci/publish_docs.sh
+- test $TRAVIS_BRANCH = "stabilize" && bash ci/publish_docs.sh
