--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
 name = "imgui-ext"
-version = "0.1.0"
+version = "0.1.0-rc0"
 authors = ["german gomez <germangb42@gmail.com>"]
 edition = "2018"
+description = "Define imgui UIs using a derive macro."
+repository = "https://github.com/germangb/imgui-ext"
+readme = "README.md"
+keywords = ["gui", "imgui", "macro"]
+categories = ["gui", "api-bindings", "game-engines"]
+license = "MIT"
+
+[badges]
+travis-ci = { repository = "germangb/imgui-ext", branch = "master" }
 
 [workspace]
 members = ["imgui_derive", "example"]
