--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -3,6 +3,7 @@ name = "example"
 version = "0.1.0"
 authors = ["german gomez <germangb42@gmail.com>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 sdl2 = { version = "0.32.1", optional = true }
