--- a/imgui_derive/Cargo.toml
+++ b/imgui_derive/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "imgui-ext-derive"
-version = "0.1.0"
+version = "0.1.0-rc0"
 authors = ["german gomez <germangb42@gmail.com>"]
 edition = "2018"
+description = "Procedural macro for the imgui-ext crate."
+repository = "https://github.com/germangb/imgui-ext"
+readme = "README.md"
+keywords = ["gui", "imgui", "macro"]
+categories = ["gui", "api-bindings", "game-engines"]
+license = "MIT"
 
 [lib]
 proc-macro = true
