--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ members = ["imgui_derive", "example"]
 
 [dependencies]
 imgui = "*"
-imgui-ext-derive = { path = "imgui_derive" }
+imgui-ext-derive = { version = "0.1.0-rc0", path = "imgui_derive" }
