--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -12,7 +12,7 @@ imgui-opengl-renderer = { version = "0.3.2", optional = true }
 gl = { version = "0.11.0", optional = true }
 
 imgui = "0.0.21"
-imgui-ext = { path = "../" }
+imgui-ext = { version = "0.1.0-rc0", path = "../" }
 
 [features]
 default = ["sdl"]
