--- a/imgui_derive/Cargo.toml
+++ b/imgui_derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imgui-ext-derive"
-version = "0.1.0-rc3"
+version = "0.1.0"
 authors = ["german gomez <germangb42@gmail.com>"]
 edition = "2018"
 description = "Procedural macro for the imgui-ext crate."
