--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imgui-ext"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["german gomez <germangb42@gmail.com>"]
 edition = "2018"
 description = "Define imgui UIs using a derive macro."
@@ -18,5 +18,5 @@ travis-ci = { repository = "germangb/imgui-ext", branch = "master" }
 members = ["imgui_derive", "example"]
 
 [dependencies]
-imgui = "^0.0.21"
-imgui-ext-derive = { version = "0.1.2", path = "imgui_derive" }
+imgui = "0.0.22"
+imgui-ext-derive = { version = "0.1.3", path = "imgui_derive" }
