--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -7,12 +7,20 @@ publish = false
 
 [dependencies]
 sdl2 = { version = "0.32.1", optional = true }
-imgui-sdl2 = { version = "0.4.0", optional = true }
-imgui-opengl-renderer = { version = "0.3.2", optional = true }
 gl = { version = "0.11.0", optional = true }
 
-imgui = "0.0.21"
-imgui-ext = { path = "../" }
+imgui = "0.0.22"
+imgui-ext = { version = "0.1.3", path = "../" }
+
+[dependencies.imgui-sdl2]
+git = "https://github.com/germangb/rust-imgui-sdl2.git"
+branch = "imgui-22"
+optional = true
+
+[dependencies.imgui-opengl-renderer]
+git = "https://github.com/germangb/rust-imgui-opengl-renderer.git"
+branch = "imgui-22"
+optional = true
 
 [features]
 default = ["sdl"]
