catch parameter defaults to field name + enhanced example + updated rustdoc
Signed-off-by: german gomez <germangb42@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imgui-ext"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["german gomez <germangb42@gmail.com>"]
 edition = "2018"
 description = "Define imgui UIs using a derive macro."
@@ -9,7 +9,7 @@ readme = "README.md"
 keywords = ["gui", "imgui", "macro"]
 categories = ["gui", "api-bindings", "game-engines"]
 license = "MIT"
-exclude = ["ci/*"]
+exclude = ["ci/*", "page_deploy/*"]
 
 [badges]
 travis-ci = { repository = "germangb/imgui-ext", branch = "master" }
@@ -19,4 +19,4 @@ members = ["imgui_derive", "example"]
 
 [dependencies]
 imgui = "0.0.22"
-imgui-ext-derive = { version = "0.1.4", path = "imgui_derive" }
+imgui-ext-derive = { version = "0.1.5", path = "imgui_derive" }
