--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-sdl2 = { version = "0.32.1", optional = true }
+sdl2 = { version = "0.32.1", features = ["bundled"], optional = true }
 gl = { version = "0.11.0", optional = true }
 
 imgui = "0.0.22"
