- implement input for matrix types - refactor examples package - new "map" attribte on input
Signed-off-by: german gomez <germangb42@gmail.com>

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -15,6 +15,9 @@ imgui-ext = { version = "0.1.9", path = "../" }
 imgui-sdl2 = { version = "0.5.0", optional = true }
 imgui-opengl-renderer = { version = "0.4.0", optional = true }
 
+[dev-dependencies]
+glm = { package = "nalgebra-glm", version = "0.4.0" }
+
 [features]
 default = ["sdl"]
 sdl = ["sdl2", "imgui-sdl2", "imgui-opengl-renderer", "gl"]
