--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ members = ["imgui_derive", "example"]
 imgui = "0.0.23"
 imgui-ext-derive = { version = "0.1.9", path = "imgui_derive" }
 
+[features]
+default = []
+
 [patch.crates-io]
 imgui-sdl2 = { git = "https://github.com/germangb/rust-imgui-sdl2.git", branch = "imgui_23"}
 imgui-opengl-renderer = { git = "https://github.com/germangb/rust-imgui-opengl-renderer.git", branch = "imgui_23"}
