--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,11 @@ imgui = "0.0.23"
 imgui-ext-derive = { version = "0.1.9", path = "imgui_derive" }
 
 [features]
-default = []
+default = ["matrix"]
+
+# Support for annotations on 2D arrays (matrices). Though enabled by default, this is
+# kept as a feature because imgui doesn't have native support for 2D arrays. Only 1D.
+matrix = []
 
 [patch.crates-io]
 imgui-sdl2 = { git = "https://github.com/germangb/rust-imgui-sdl2.git", branch = "imgui_23"}
