--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -16,7 +16,7 @@ imgui-sdl2 = { version = "0.5.0", optional = true }
 imgui-opengl-renderer = { version = "0.4.0", optional = true }
 
 [dev-dependencies]
-glm = { package = "nalgebra-glm", version = "0.4.0" }
+nalgebra-glm = "0.4.0"
 
 [features]
 default = ["sdl"]
