--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imgui-ext"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["german gomez <germangb42@gmail.com>"]
 edition = "2018"
 description = "A crate to build debug UIs on structs using a derive macro (based on the imgui crate)"
@@ -18,8 +18,8 @@ travis-ci = { repository = "germangb/imgui-ext", branch = "master" }
 members = ["imgui_derive"]
 
 [dependencies]
-imgui = "0.0.23"
-imgui-ext-derive = { version = "0.2.1", path = "imgui_derive" }
+imgui = "0.1"
+imgui-ext-derive = { version = "0.3", path = "imgui_derive" }
 
 [dev-dependencies]
 na = { package = "nalgebra", version = "0.18.0" }
@@ -34,7 +34,9 @@ default = ["matrix"]
 # Support for annotations on 2D arrays (matrices). Though enabled by default, this is
 # kept as a feature because imgui doesn't have native support for 2D arrays. Only 1D.
 matrix = []
+# TODO optional support for mint types
+mint = []
 
 [patch.crates-io]
-imgui-sdl2 = { git = "https://github.com/germangb/rust-imgui-sdl2.git", branch = "imgui_23"}
-imgui-opengl-renderer = { git = "https://github.com/germangb/rust-imgui-opengl-renderer.git", branch = "imgui_23"}
+imgui-sdl2 = { git = "https://github.com/germangb/rust-imgui-sdl2.git", branch = "imgui-0.1"}
+imgui-opengl-renderer = { git = "https://github.com/germangb/rust-imgui-opengl-renderer.git", branch = "imgui-0.1"}
